@@ -148,7 +148,6 @@ void TilesFramework::shutdown()
     delete m_region_inv;
     delete m_region_crt;
     delete m_region_menu;
-    delete m_region_title;
 
     m_region_tile  = NULL;
     m_region_stat  = NULL;
@@ -157,7 +156,12 @@ void TilesFramework::shutdown()
     m_region_inv   = NULL;
     m_region_crt   = NULL;
     m_region_menu  = NULL;
-    m_region_title = NULL;
+
+    if (m_region_title)
+    {
+        delete m_region_title;
+        m_region_title = NULL;
+    }
 
     for (unsigned int i = 0; i < LAYER_MAX; i++)
         m_layers[i].m_regions.clear();
@@ -180,6 +184,9 @@ void TilesFramework::draw_title()
 
     mouse_control mc(MOUSE_MODE_MORE);
     getch();
+
+    delete m_region_title;
+    m_region_title = NULL;
 }
 
 void TilesFramework::calculate_default_options()
@@ -331,8 +338,6 @@ bool TilesFramework::initialise()
     m_region_crt  = new CRTRegion(m_fonts[crt_font].font);
     m_region_menu = new MenuRegion(&m_image, m_fonts[crt_font].font);
 
-    m_region_title = new TitleRegion(m_windowsz.x, m_windowsz.y);
-
     m_layers[LAYER_NORMAL].m_regions.push_back(m_region_map);
     m_layers[LAYER_NORMAL].m_regions.push_back(m_region_tile);
     m_layers[LAYER_NORMAL].m_regions.push_back(m_region_inv);
@@ -342,7 +347,12 @@ bool TilesFramework::initialise()
     m_layers[LAYER_CRT].m_regions.push_back(m_region_crt);
     m_layers[LAYER_CRT].m_regions.push_back(m_region_menu);
 
-    m_layers[LAYER_TITLE].m_regions.push_back(m_region_title);
+    // Only initialize title region if we'll actually want to draw it.
+    if (Options.tile_title_screen)
+    {
+        m_region_title = new TitleRegion(m_windowsz.x, m_windowsz.y);
+        m_layers[LAYER_TITLE].m_regions.push_back(m_region_title);
+    }
 
     cgotoxy(1, 1, GOTO_CRT);
 
