@@ -5,6 +5,7 @@ Disclaimer: These are merely the highlights, not an exhaustive list of changes.
 
 * Improved performance for the Tiles version.
 * Fixed crashes related to giant spores.
+* Fixed Summon Horrible Thing sometimes hanging or crashing.
 * Fixed monsters refusing to enter or attack into grids on the map edge.
 * Fixed minivaults not being placed.
 * Fixed inconvenient electrical eels in entry vaults.
@@ -12,12 +13,17 @@ Disclaimer: These are merely the highlights, not an exhaustive list of changes.
 * Fixed erroneous "blocked line of fire" warnings.
 * Fixed missing items in Tiles inventory menus.
 * Fixed Xom's repel stairs effect moving shops.
+* Fixed Xom gifts not being destroyed in deep water.
 * Fixed magic mapping not showing altars/gates in the Tiles version.
 * Fixed AltGr not being recognized in Windows Tiles version.
 * Fixed misbehaviour for temporary weapon brands and throwing.
 * Fixed Blade Hands not counting as slicing while wearing melded gloves.
 * Fixed certain incorporeal monsters flying instead of levitating.
+* Staff of earth damage is reduced by AC.
+* The elemental staves' melee effects cost 2 mp again.
 * Once entered, the gate to Zot remains open even without carrying runes.
+* Add some fancy messaging when opening the gate to Zot.
+* Prompt before moving when confused and next to lava or deep water.
 * Check some abilities' requirements before rolling the success check.
 * Consider armour properties in fatal stat loss check before transforming.
 * Really allow uniques to retain their spells when polymorphed.
@@ -28,6 +34,7 @@ Disclaimer: These are merely the highlights, not an exhaustive list of changes.
 * Prompt before allowing TSO/Lugonu to bless your weapon.
 * Vampiric Draining/Drain Life deal damage to summons again, but don't heal.
 * Wielding stones for Sandblast now guarantees a range of 2.
+* Change Portal Projectile range to full LOS.
 * Turn autopickup back on if you gain see invisible, even temporarily.
 * Polymorph other always polymorphs shapeshifters whose form isn't magic immune.
 * Troll hide and armour count as light armour.
